--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,7 +24,17 @@
     },
     {
       "src": "/apple-touch-icon.png",
-      "sizes": "16x16",
+      "sizes": "180x180",
+      "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/android-chrome-512x512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
